5eShapedCompanion/1.1.0/CHANGELOG.md
<a name="1.1.0"></a>
# [1.1.0](https://github.com/symposion/roll20-shaped-scripts/compare/1.0.3...v1.1.0) (2016-04-18)


### Bug Fixes

* **abilities:** Changed to not create a macro action when there are no corresponding actions. ([335fdd9](https://github.com/symposion/roll20-shaped-scripts/commit/335fdd9)), closes [#2](https://github.com/symposion/roll20-shaped-scripts/issues/2)
* **hpRoll:** Fix hp rolling to respect max setting for token bar ([b18e2a4](https://github.com/symposion/roll20-shaped-scripts/commit/b18e2a4)), closes [#23](https://github.com/symposion/roll20-shaped-scripts/issues/23)
* **statblock:** Support statblock abilities in two line format ([d7904b0](https://github.com/symposion/roll20-shaped-scripts/commit/d7904b0))

### Features

* **config:** Add auto HD and Roll HD on drop options to config UI ([4e08a92](https://github.com/symposion/roll20-shaped-scripts/commit/4e08a92)), closes [#25](https://github.com/symposion/roll20-shaped-scripts/issues/25)
* **config:** Support max dex for medium armor and half-proficiency saves houserules ([0868c9a](https://github.com/symposion/roll20-shaped-scripts/commit/0868c9a))



<a name="1.0.3"></a>
## [1.0.3](https://github.com/symposion/roll20-shaped-scripts/compare/1.0.2...v1.0.3) (2016-04-17)




<a name="1.0.2"></a>
## [1.0.2](https://github.com/symposion/roll20-shaped-scripts/compare/1.0.1...v1.0.2) (2016-04-16)


### Bug Fixes

* **build:** Attempt to fix not-deterministic problem with github releases ([c408f87](https://github.com/symposion/roll20-shaped-scripts/commit/c408f87))



<a name="1.0.1"></a>
## [1.0.1](https://github.com/symposion/roll20-shaped-scripts/compare/1.0.0...v1.0.1) (2016-04-16)




<a name="1.0.0"></a>
# [1.0.0](/https://github.com/symposion/roll20-api-scripts//compare/v0.1.0...v1.0.0) (2016-04-15)


### Bug Fixes

* **build:** add push so that version numbering actually gets applies ([0e96b0b](https://github.com/symposion/roll20-api-scripts//commits/0e96b0b))
* **build:** another go at fixing the build ([2441bc9](https://github.com/symposion/roll20-api-scripts//commits/2441bc9))
* **build:** another go at fixing the build ([6dd25e3](https://github.com/symposion/roll20-api-scripts//commits/6dd25e3))
* **build:** Attempt to get changelog working ([58c2b63](https://github.com/symposion/roll20-api-scripts//commits/58c2b63))


### BREAKING CHANGES

* build: testing if this works



